<resources>
    <string name="app_name">YoutubeFxc</string>

    <string name="entertainment">Entertainment</string>
    <string name="gaming">Gaming</string>
    <string name="music">Music</string>
    <string name="latest">Latest</string>
    <string name="recommended">Recommended</string>

    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
