<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/left_up_nav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/left_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/youtube_icon"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:background="@color/left_nav"
            android:padding="10dp"
            android:src="@drawable/ic_youtube_color_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/search_btn"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_bg"
            android:clickable="true"
            android:focusable="true"
            android:nextFocusDown="@+id/home_btn"
            android:padding="10dp"
            android:src="@drawable/lb_ic_in_app_search"
            app:layout_constraintStart_toStartOf="@+id/youtube_icon"
            app:layout_constraintTop_toBottomOf="@+id/youtube_icon" />

        <ImageView
            android:id="@+id/home_btn"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_bg"
            android:clickable="true"
            android:focusable="true"
            android:focusedByDefault="true"
            android:nextFocusUp="@+id/search_btn"
            android:nextFocusDown="@+id/subscribe_btn"
            android:padding="10dp"
            android:src="@drawable/ic_home_white_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_btn"
            tools:targetApi="o" />

        <ImageView
            android:id="@+id/subscribe_btn"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_bg"
            android:clickable="true"
            android:focusable="true"
            android:nextFocusUp="@+id/home_btn"
            android:nextFocusDown="@+id/folder_btn"
            android:padding="10dp"
            android:src="@drawable/ic_subscriptions_white_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_btn" />

        <ImageView
            android:id="@+id/folder_btn"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_bg"
            android:clickable="true"
            android:focusable="true"
            android:nextFocusUp="@+id/subscribe_btn"
            android:nextFocusDown="@+id/setting_btn"
            android:padding="10dp"
            android:src="@drawable/ic_folder_white_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subscribe_btn" />

    </LinearLayout>

    <ImageView
        android:id="@+id/setting_btn"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:nextFocusUp="@+id/folder_btn"
        android:padding="10dp"
        android:src="@drawable/ic_settings_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/top_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/left_up_nav"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/recommend_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:nextFocusLeft="@id/home_btn"
            android:text="@string/recommended" />

        <Button
            android:id="@+id/latest_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/latest" />

        <Button
            android:id="@+id/music_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/music" />

        <Button
            android:id="@+id/entertainment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/entertainment" />

        <Button
            android:id="@+id/gaming_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/gaming" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/left_up_nav"
        app:layout_constraintTop_toBottomOf="@+id/top_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:context=".YoutubeActivity" />

</android.support.constraint.ConstraintLayout>



